crates/review-buddy/tests/snapshots/drafts__leave_confirm_160x40_default_theme.snap
---
source: crates/review-buddy/tests/drafts.rs
expression: text(& render(& mut a))
---
 review buddy  ·  demo · 4 sources · 7 changes                                                                                                       Liminal HQ
 GH liminal-hq/review-buddy#214 · liminal-hq · Add a menu bar and keyboard-driven menus · ada · ada/menus → main
╭ files 3 ───────────────────────╮╭ src/ui/menus.rs ───────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│› · src/ui/menus.rs       +22 −1││              @@ -10,7 +10,9 @@ use crate::app::Action;                                                                     │
│  · src/ui/menubar.rs      +8 −0││›   10   10                                                                                                                 │
│  · src/ui/mod.rs          +2 −0││              ╭─ pending comment · line 10 ────────────────────────────────────────────────────────────────────────────────╮│
│                                ││              │ This could return early.                                                                                   ││
│                                ││              ╰────────────────────────────────────────────────────────────────────────────────────────────────────────────╯│
│                                ││    11   11   pub struct Menu {                                                                                             │
│                                ││    12   12       items: Vec<MenuItem>,                                                                                     │
│                                ││         13 +     selected: usize,                                                                                          │
│                                ││         14 +     open: bool,                                                                                               │
│                                ││    13   15   }                                                                                                             │
│                                ││    14   16                                                                                                                 │
│                                ││    15   17   impl Menu {                                                                                                   │
│                                ││    16   18       pub fn new(items: Vec<MenuItem>) -> Self {                                                                │
│                                ││             ╭ Keep these 2 comments as a draft? ───────────────────────────╮                                               │
│                                ││    34   36  │ Nothing has been sent to the forge.                          │                                               │
│                                ││    35   37  │ A kept draft lasts this session only; it isn't saved to disk │                                               │
│                                ││    36   38  │ Discard throws these comments away.                          │                                               │
│                                ││         39 +│                                                              │                                               │
│                                ││         40 +│ › Keep ‹    Discard      Cancel                              │                                               │
│                                ││         41 +╰──────────────────────────────────────────────────────────────╯                                               │
│                                ││         42 +             return;                                                                                           │
│                                ││         43 +         }                                                                                                     │
│                                ││         44 +         self.selected = (self.selected + 1) % self.items.len();                                               │
│                                ││              ╭─ thread · line 44 ─────────────────────────────────────────────────────────────────────────────────────────╮│
│                                ││              │ jo · 1d                                                                                                    ││
│                                ││              │ Should this wrap round to the first item? Most menus I use stop at the end.                                ││
│                                ││              │ ada · 20h                                                                                                  ││
│ Your review · pending ─────────││              │ I went with wrapping so a held key never gets stuck. Happy to make it configurable if you'd rather.        ││
│1 suggestion · 1 comment        ││              ╰────────────────────────────────────────────────────────────────────────────────────────────────── r reply ─╯│
│0 of 3 files viewed             ││         45 +     }                                                                                                         │
│Your review: not started        ││         46 +                                                                                                               │
│  menus.rs:51 Fewer branches th…││         47 +     pub fn select_prev(&mut self) {                                                                           │
│  menus.rs:10 This could return…││         48 +         if self.items.is_empty() {                                                                            │
│a approve · c comment           ││         49 +             return;                                                                                           │
│x request changes · R review    ││         50 +         }                                                                                                     │
╰────────────────────────────────╯╰ hunk 1 of 3 · file 1 of 3 ─────────────────────────────────────────────────────────────────────────────────────────────────╯
 j/k move  n/p hunk  ← → file  tab pane  c comment  a approve  R submit a review        · Added to your pending review. 2 comments waiting. Press a to approve.
